fixtures/core/schema/rejected/core-module-missing-intents.fields
# Core modules must declare the intent map.
expect reject
shape core-module
field apiVersion
field coordinate
field imports
field requiredCoreCapabilities
field types
